base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashtools
  namespace: flashtools
spec:
  selector:
    app: flashtools
  ports:
    - port: 80
      targetPort: 80
